--- a/index.html
+++ b/index.html
@@ -4,19 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Przykład z divami</title>
-    <style>
-        .header {
-            display: flex;
-            justify-content: space-between;
-        }
-        .logo {
-            width: 20%;
-            padding: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">
+    <header>
+        <nav>
+        <div class="header">
         <div class="logo">
             <img src="Bez tytułu_edited.png" alt="Logo">
         </div>
@@ -39,7 +32,15 @@
         <div>
             <h2>Cennik</h2>
         </div>
-    </div>
+    </nav>
+    </header>
+    <main>
+        <section id="lewa">
 
+        </section>
+
+
+
+    </main>
 </body>
 </html>
