--- a/index.html
+++ b/index.html
@@ -8,34 +8,33 @@
 </head>
 <body>
     <header>
+        <div><img src="Fryzjerdaniel.png" class="Logo" alt="Logo"></div>
         <nav>
-        <div class="header">
-        <div class="logo">
-            <img src="Bez tytułu_edited.png" alt="Logo">
-        </div>
-        <div class="Home">
-         <h2>Home</h2>   
-        </div>
-        <div class="uslugi">
+            <a class="strona_główna" href="https://polovkodaniel.github.io/PolovkoDaniel4TI/">Stona główna</a>
+        <div class="Menu">
             <form>
-                <label for="Uslugi">
-            <select name="uslugi" Id="uslugi" placeholder="Uslugi">
-                <option>Fryzury męskie</option>
-                <option>Fryzury damskie</option>
-                <option>Fryzury dla zwierząt</option>
-                <option>Godziny pracy</option>
-                <option>Kontakty</option>
+                <label for="Menu">
+            <select name="Menu" placeholder="Menu">
+                <option value="" disabled selected>Menu</option>
+                <option value="fryzury-meskie">Fryzury męskie</option>
+                <option value="fryzury-damskie">Fryzury damskie</option>
+                <option value="fryzury-dla-zwierzat">Fryzury dla zwierząt</option>
+                <option value="godziny-pracy">Godziny pracy</option>
+                <option value="kontakty">Kontakty</option>
             </select>
         </label>
             </form>
         </div>
-        <div>
-            <h2>Cennik</h2>
+        <div class="Cennik">
+            <p>Cennik</p>
         </div>
     </nav>
     </header>
     <main>
         <section id="lewa">
+
+        </section>
+        <section id="prawa">
 
         </section>
 
