--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Przykład z divami</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Daniel`s News</title>
+    <link rel="stylesheet" href="style1.css">
 </head>
 <body>
-    <header>
-        <div><img src="Fryzjerdaniel.png" class="Logo" alt="Logo"></div>
+    <header id="left">
+        <div id="left1">
+            <div><img src="danielnews.png" class="Logo" alt="Logo"></div>
+        
         <nav>
             <a class="strona_główna" href="https://polovkodaniel.github.io/PolovkoDaniel4TI/">Stona główna</a>
         <div class="Menu">
@@ -16,30 +18,20 @@
                 <label for="Menu">
             <select name="Menu" placeholder="Menu">
                 <option value="" disabled selected>Menu</option>
-                <option value="fryzury-meskie">Fryzury męskie</option>
-                <option value="fryzury-damskie">Fryzury damskie</option>
-                <option value="fryzury-dla-zwierzat">Fryzury dla zwierząt</option>
-                <option value="godziny-pracy">Godziny pracy</option>
-                <option value="kontakty">Kontakty</option>
+                <option value="Aktualne">Aktualne</option>
+                <option value="Kontakt">Kontakt</option>
+                <option value="Pogoda">Pogoda</option>
+                <option value="Pan Sałach?">Pan Sałach?</option>
             </select>
         </label>
             </form>
         </div>
-        <div class="Cennik">
-            <p>Cennik</p>
-        </div>
     </nav>
+</div>
+        <div id="left2"></div>
     </header>
-    <main>
-        <section id="lewa">
-
-        </section>
-        <section id="prawa">
-
-        </section>
-
-
-
-    </main>
+    <header id="right">
+asd
+    </header>
 </body>
 </html>
